[package]
name = "julia"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = { git = "https://github.com/sayantangkhan/image-png" }
rayon = "1.5"
clap = "3.0.0-beta.2"

[dependencies.num-complex]
version = "0.4"
default-features = false
